Fix control bar layout for inset skins in timeSliderAbove mode Ensure control bar is visible during ad playback on touch devices Ensure controls are hidden during muted autostart on touch devices JW7-3943, JW7-3948

--- a/src/css/flags/time-slider-above.less
+++ b/src/css/flags/time-slider-above.less
@@ -3,10 +3,6 @@
 /* time slider above or small player (both override player into same UI) */
 .jw-flag-time-slider-above:not(.jw-flag-ads-googleima) {
 
-  .jw-controlbar {
-    display: table;
-  }
-
   &.jw-state-idle:not(.jw-flag-cast-available) {
     .jw-controlbar {
       display: none;
@@ -16,12 +12,6 @@
       padding: 0;
     }
   }
-
-  /* ==================================================
-  dock
-  */
-
-
 
   /* ==================================================
   display
@@ -48,6 +38,7 @@
     */
 
     .jw-controlbar {
+      display: table; // Ensure inset control bars have the right layout
       background: linear-gradient(180deg, rgba(0,0,0,0) 0, rgba(0,0,0,0.25) 30%, rgba(0,0,0,0.4) 70%, rgba(0,0,0,0.5) 100%);
       border: none;
       border-radius: 0;
