--- a/src/css/flags/user-inactive.less
+++ b/src/css/flags/user-inactive.less
@@ -1,7 +1,7 @@
 @import "../imports/vars";
 @import "controls-hidden";
 
-.jwplayer.jw-flag-user-inactive:not(.jw-flag-media-audio) {
+.jw-flag-user-inactive:not(.jw-flag-media-audio) {
 
   &.jw-state-playing {
 
