--- a/src/css/states/idle.less
+++ b/src/css/states/idle.less
@@ -23,9 +23,10 @@
         display: block;
     }
 
-    /* hide control bar and clear display container padding on idle state unless
-    cast available flag is set */
-    &:not(.jw-flag-cast-available) {
+    // Hide control bar and clear display container padding on idle state unless
+    // cast available flag is set
+    // Specificity needed for inset control bar
+    .jwplayer&:not(.jw-flag-cast-available) {
 
       .jw-controlbar {
         display: none;
